# MAR

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Python_API().py  Python_API.py  Python_APIb.py  detect.py  detectiontxt  edgetpumodel.py  mar.py  mar_test_v1.py  mar_tse.py  package.xml  strategy_MAR.py  strategy_mar.py  targetdata320.yaml  utils.py  yolo_str.py
47/: best-int8_edgetpu.tflite
82/: best-int8_edgetpu.tflite
96/: ball.yaml  best-int8_edgetpu.tflite
Parameter/: 20190628.ini  20190704.ini  CameraSet.ini  ColorModelData.ini  dirmap.ini  (+16 more)
src/strategy/: CMakeLists.txt  package.xml
src/strategy/Kidsize_HuroCup/: MAR_test.py  MarathonInfo.cpp  Python_API.py  detect.py  detector.cpp  hahahaha.py  mar_origin_strategy_.py  mar_strategy.py  mar_test.py  origin_strategy_.py  strategy_MAR.py  strategy_main.cpp  targetdata320.yaml
src/strategy/Parameter/: 09.ini  1.ini  CameraSet.ini  ColorModelData.ini  Continuous_Back.ini  Continuous_Parameter.ini  Continuous_Second_Parameter.ini  LCdown_Parameter.ini  LCstep_Parameter.ini  MAR_adult.ini  NewFile.ini  SP_adult.ini  Single_Parameter.ini  cascade2Left.xml  cascade2Right.xml  cascade2Right1.xml  cascade2Straight.xml  cascade2Straight_1.xml  cascade_left2.xml  quickchange.ini
src/strategy/Parameter/sector/: 1.ini  10.ini  100.ini  111.ini  1111.ini  112.ini  1218.ini  12182.ini  1234.ini  128.ini  15.ini  1521.ini  2.ini  21.ini  22.ini  234.ini  28.ini  3.ini  4.ini  5.ini  55.ini  6.ini  9.ini
src/strategy/include/strategy/: MarathonInfo.h  detector.h  strategy_main.h
src/strategy/srv/: example.srv
(+19 files in other folders)
